
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int big ;
 int dalen ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int small ;
 int stderr ;

void
solve (int remain)
{
  int x, y;
  big = -100;
  small = -100;
  for (x = 0; x < 120; x++)
    for (y = 2; y < 80; y++)
      {
 if (((y * 3) + (x * dalen)) == remain)
   {
     big = x;
     small = y;
     return;
   }
      }
      fprintf (stderr, "I still can't work it out.\n\n");
      exit (1);
}
