; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_21018.c_solve.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_21018.c_solve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@big = common dso_local global i32 0, align 4
@small = common dso_local global i32 0, align 4
@dalen = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"I still can't work it out.\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @solve(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 -100, i32* @big, align 4
  store i32 -100, i32* @small, align 4
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %29, %1
  %6 = load i32, i32* %3, align 4
  %7 = icmp slt i32 %6, 120
  br i1 %7, label %8, label %32

8:                                                ; preds = %5
  store i32 2, i32* %4, align 4
  br label %9

9:                                                ; preds = %25, %8
  %10 = load i32, i32* %4, align 4
  %11 = icmp slt i32 %10, 80
  br i1 %11, label %12, label %28

12:                                               ; preds = %9
  %13 = load i32, i32* %4, align 4
  %14 = mul nsw i32 %13, 3
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @dalen, align 4
  %17 = mul nsw i32 %15, %16
  %18 = add nsw i32 %14, %17
  %19 = load i32, i32* %2, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %12
  %22 = load i32, i32* %3, align 4
  store i32 %22, i32* @big, align 4
  %23 = load i32, i32* %4, align 4
  store i32 %23, i32* @small, align 4
  ret void

24:                                               ; preds = %12
  br label %25

25:                                               ; preds = %24
  %26 = load i32, i32* %4, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %4, align 4
  br label %9

28:                                               ; preds = %9
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %3, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %3, align 4
  br label %5

32:                                               ; preds = %5
  %33 = load i32, i32* @stderr, align 4
  %34 = call i32 @fprintf(i32 %33, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %35 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
